--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -5,29 +5,41 @@ on:
     - cron: "*/1 * * * *"
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Clone repository
+
+    - name: checkout code
+      uses: actions/checkout@v2
+    - name: actions/setup-node@v2
+      uses: actions/setup-node@v2   
+      with:
+        node-version: '16.14'
+        cache: 'yarn'
+        cache-dependency-path: '**/yarn.lock'
+
+    - run: yarn install && yarn build  
+
+    - name: upload files 
+      uses: actions/upload-artifact@v2
+      with: 
+        name: build-pages
+        path: build
+        retention-days: 1
+  Deploy: 
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout code
         uses: actions/checkout@v2
-
-      - name: Install deno
-        uses: denolib/setup-deno@master
-
-      - name: Run deno
-        run: |
-          git config --local user.email "2979986590@qq.com"
-          git config --local user.name "webVueBlog"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.AWESOME_CSS_TOKEN }}@github.com/${{ github.repository }}
-          git pull
-          set -e
-          yarn build
-          printf "打包成功\n"
-          cd docs/.vuepress/dist
-          git init
-          git checkout -b dist
-          git add -A
-          git commit -m 'awesome-css github-pages'
-          git push
-          printf "提交成功\n"
+      - name: download build files
+        uses: actions/download-artifact@v2
+        with:
+          name: build-pages
+          path: build
+      - name: deploy
+        uses: JamesIves/github-pages-deploy-action@v4.2.3
+        with:
+          branch: dist
+          folder: dist 
+          token: "${{ secrets.AWESOME_CSS_TOKEN }}"  
