--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,8 +1,8 @@
-name: schedule
-
-on:
-  schedule:
-    - cron: "*/1 * * * *"
+name: First GitHub Actions Demo
+on: 
+  push:
+    branches:
+      - master
 
 jobs:
   Build:
@@ -17,7 +17,7 @@ jobs:
         node-version: '16.14'
         cache: 'yarn'
         cache-dependency-path: '**/yarn.lock'
-
+ 
     - run: yarn install && yarn build  
 
     - name: upload files 
@@ -26,7 +26,7 @@ jobs:
         name: build-pages
         path: build
         retention-days: 1
-  Deploy: 
+  Deploy:
     needs: Build
     runs-on: ubuntu-latest
     steps:
@@ -43,3 +43,4 @@ jobs:
           branch: dist
           folder: dist 
           token: "${{ secrets.AWESOME_CSS_TOKEN }}"  
+      
