--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -43,6 +43,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
           branch: dist
-          folder: build 
+          folder: dist 
           token: "${{ secrets.AWESOME_CSS_TOKEN }}"  
       
