--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with: 
         name: dist
-        path: docs/.vuepress
+        path: docs/.vuepress/
         retention-days: 1
   Deploy:
     needs: Build
@@ -38,7 +38,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist
-          path: docs/.vuepress
+          path: docs/.vuepress/
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
