--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,32 +4,42 @@ on:
   push:
     branches:
       - master
-
 jobs:
-  Build:
+  docs:
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v2
+        with:
+          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
+          fetch-depth: 0
 
-    - name: checkout code
-      uses: actions/checkout@v2
-    - name: actions/setup-node@v2
-      uses: actions/setup-node@v2   
-      with:
-        node-version: '16.14'
-        cache: 'yarn'
-        cache-dependency-path: '**/yarn.lock'
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14"
 
-    - name: Compiling start
-      run: echo Compiling start!
-    - run: git config --global user.email "2979986590@qq.com"
-    - run: git config --global user.name "webVueBlog"
-    - run: yarn install && yarn build
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        deploy_key: ${{ secrets.AWESOME_CSS_TOKEN }}
-        external_repository: webVueBlog/awesome-css
-        # 推送的分支
-        publish_branch: dist
-        # 推送的内容
-        publish_dir: docs/.vuepress/dist
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile
+
+      - name: Build VuePress site
+        run: yarn build
+
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.AWESOME_CSS_TOKEN }}
+        with:
+          target_branch: dist
+          build_dir: docs/.vuepress/dist
