feat: deploy.sh

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "awesome-css",
+	"name": "tailwindcss-chinese",
 	"version": "1.0.0",
-	"description": "awesome-css",
+	"description": "tailwindcss-chinese",
 	"author": "Jeskson-我是哪吒",
 	"license": "MIT",
 	"devDependencies": {
